fix nav bar z-index issue

--- a/sass/header.scss
+++ b/sass/header.scss
@@ -117,7 +117,6 @@ nav {
   top: 40%;
   left: 50%;
   transform: translateX(-50%);
-  z-index: 2;
   text-align: center;
 }
 
@@ -160,8 +159,7 @@ h1 {
     height: 100vh;
     width: 250px;
     top: 0;
-    right: -250px; /* hidden by default */
-    z-index: 105;
+    right: -250px; 
     padding-top: 80px;
 
     ul {
